the word chatBox is replaced by chatBot

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SMIT ChatBox</title>
+    <title>SMIT ChatBot</title>
     <link rel="stylesheet" href="./assets/style.css" />
     <link rel="stylesheet" href="./assets/responsive.css" />
     <link
@@ -15,10 +15,10 @@
     />
   </head>
   <body>
-    <div class="chatboxContainer main-container m-auto">
+    <div class="chatbotContainer main-container m-auto">
       <!-- HEADER STRUCTURE -->
       <header class="header section d-flex al-center jc-between">
-        <div class="logo">SMIT ChatBox</div>
+        <div class="logo">SMIT ChatBot</div>
         <div class="dp">DP</div>
       </header>
       <!-- CHAT BOX STRUCTURE  -->
@@ -37,13 +37,13 @@
           <input
             type="text"
             class="userInput laptopUserInput d-flex al-center jc-between"
-            placeholder="chat with chatBox by Sanaullah"
+            placeholder="chat with chatBot by Sanaullah"
             onkeypress="sendMessage()"
           />
           <input
             type="text"
             class="userInput mobileUserInput d-flex al-center jc-between d-none"
-            placeholder="chat with SMIT chatBox"
+            placeholder="chat with SMIT chatBot"
             onkeypress="sendMessage()"
           />
           <div class="sendBtn d-flex al-center jc-center">
